# controle-emprestimos

.github/workflows/: build-desktop.yml  deploy-pages.yml
controle-emprestimos/: index.html  package-lock.json  package.json  vite.config.ts
controle-emprestimos/.github/workflows/: deploy-pages.yml
controle-emprestimos/public/: manifest.webmanifest  sw.js
controle-emprestimos/src/: App.tsx  index.css  main.tsx  theme.ts
controle-emprestimos/src-tauri/: Cargo.toml  tauri.conf.json
controle-emprestimos/src-tauri/capabilities/: default.json
controle-emprestimos/src-tauri/src/: lib.rs  main.rs
controle-emprestimos/src/components/: ActionIcon.tsx  AuthBar.tsx  ClienteDrawer.tsx  ConfirmDialog.tsx  EditClienteDialog.tsx  Notificacao.tsx  NumericField.tsx  TabelaVazia.tsx
controle-emprestimos/src/contexts/: AuthContext.tsx
controle-emprestimos/src/pages/: Acesso.tsx  Clientes.tsx  Emprestimos.tsx  Resumo.tsx
controle-emprestimos/src/services/: firebase.ts
controle-emprestimos/src/types/: cliente.ts  emprestimo.ts
controle-emprestimos/src/utils/: emprestimos.ts  format.ts  storage.ts
