[package]
name = "controle-emprestimos"
version = "0.1.0"
description = "Controle local e sincronizado de emprestimos"
authors = ["FernandoProjetosGitHub"]
edition = "2021"

[lib]
name = "controle_emprestimos_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
